name:           distributed-process-extras
version:        0.2.1.2
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2016
Author:         Tim Watson
Maintainer:     Tim Watson <watson.timothy@gmail.com>
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-extras
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-extras/issues
synopsis:       Cloud Haskell Extras
description:    Supporting library, providing common types and utilities used by the
                various components that make up the distributed-process-platform package.
category:       Control
tested-with:    GHC == 7.8.4 GHC == 7.10.2 GHC == 7.10.3
data-dir:       ""
extra-source-files: ChangeLog

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-extras

library
  build-depends:   base >= 4.6,
                   data-accessor >= 0.2.2.3,
                   distributed-process >= 0.6.1,
                   binary >= 0.6.3.0,
                   deepseq >= 1.3.0.1,
                   mtl >= 2.0,
                   containers >= 0.4,
                   exceptions >= 0.5,
                   hashable >= 1.2.0.5,
                   unordered-containers >= 0.2.3.0,
                   fingertree < 0.2,
                   stm >= 2.4,
                   time > 1.4,
                   transformers >= 0.2
  extensions:      CPP
  other-extensions: ExistentialQuantification
  ghc-options:      -Wall
  HS-Source-Dirs:    src
  exposed-modules:
                   Control.Distributed.Process.Extras,
                   Control.Distributed.Process.Extras.Call,
                   Control.Distributed.Process.Extras.Monitoring,
                   Control.Distributed.Process.Extras.SystemLog,
                   Control.Distributed.Process.Extras.Time,
                   Control.Distributed.Process.Extras.Timer,
                   Control.Distributed.Process.Extras.UnsafePrimitives,
                   Control.Concurrent.Utils,
                   Control.Distributed.Process.Extras.Internal.Containers.MultiMap,
                   Control.Distributed.Process.Extras.Internal.Primitives,
                   Control.Distributed.Process.Extras.Internal.Types,
                   Control.Distributed.Process.Extras.Internal.Queue.SeqQ,
                   Control.Distributed.Process.Extras.Internal.Queue.PriorityQ
                   Control.Distributed.Process.Extras.Internal.Unsafe

test-suite InternalQueueTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.6,
                   ansi-terminal >= 0.5,
                   distributed-process >= 0.6.1,
                   distributed-process-extras,
                   distributed-process-systest >= 0.1.0,
                   HUnit >= 1.2,
                   test-framework >= 0.6,
                   test-framework-hunit,
                   QuickCheck >= 2.4,
                   test-framework-quickcheck2,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -rtsopts
  extensions:      CPP
  main-is:         TestQueues.hs
  cpp-options:     -DTESTING

test-suite PrimitivesTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.6,
                   ansi-terminal >= 0.5,
                   distributed-process >= 0.6.1,
                   distributed-process-extras,
                   distributed-process-systest >= 0.1.0,
                   network-transport >= 0.4,
                   mtl,
                   containers >= 0.4,
                   network-transport-tcp >= 0.4,
                   binary >= 0.6.3.0,
                   deepseq >= 1.3.0.1,
                   network >= 2.3,
                   HUnit >= 1.2,
                   stm >= 2.3,
                   test-framework >= 0.6,
                   test-framework-hunit,
                   rematch >= 0.2.0.0,
                   transformers
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestPrimitives.hs

test-suite TimerTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base >= 4.6,
                   ansi-terminal >= 0.5,
                   deepseq >= 1.3.0.1,
                   distributed-process >= 0.6.1,
                   distributed-process-extras,
                   distributed-process-systest >= 0.1.0,
                   network-transport >= 0.4,
                   network-transport-tcp >= 0.4,
                   HUnit >= 1.2,
                   test-framework >= 0.6,
                   test-framework-hunit,
                   QuickCheck >= 2.4,
                   test-framework-quickcheck2,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -rtsopts
  extensions:      CPP
  main-is:         TestTimer.hs
  cpp-options:     -DTESTING

test-suite LoggerTests
  type:            exitcode-stdio-1.0
--  x-uses-tf:       true
  build-depends:
                   base >= 4.6,
                   ansi-terminal >= 0.5,
                   containers,
                   hashable,
                   unordered-containers >= 0.2.3.0,
                   distributed-process >= 0.6.1,
                   distributed-process-extras,
                   distributed-process-systest >= 0.1.0,
                   distributed-static,
                   bytestring,
                   data-accessor,
                   fingertree < 0.2,
                   network-transport >= 0.4,
                   deepseq >= 1.3.0.1,
                   mtl,
                   network-transport-tcp >= 0.4,
                   binary >= 0.6.3.0,
                   network >= 2.3,
                   HUnit >= 1.2,
                   stm >= 2.3,
                   time > 1.4,
                   test-framework >= 0.6,
                   test-framework-hunit,
                   transformers,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
  extensions:      CPP
  main-is:         TestLog.hs
